[package]
authors = ["moppiner <moppiner@a-0.io>"]
name = "e621"
version = "0.1.0"
keywords = ["furry", "yiff", "api", "client"]
license = "MIT"
homepage = "https://github.com/moppiner/e621-rs"
repository = "https://github.com/moppiner/e621-rs"
categories = ["api-bindings"]
description = "A safe binding for the e621 web API, written in the Rust programming language."

[dependencies]
reqwest = "0.9.2"
serde_derive = "1.0.79"
serde = "1.0.79"

[badges]
maintenance = { status = "actively-developed" }
